@@ -1,3 +1,7 @@
+2008-01-24  Ingo Renner  <ingo@typo3.org>
+
+	* added missing description to module menu, credits Steffen Kamper
+
 2008-01-24  Stanislas Rolland  <stanislas.rolland@fructifor.ca>
 
 	* Added feature: Various enhancements to link dialogues in htmlArea RTE
